# triz-copilot

./: .flake8  .gitignore  CLAUDE.md  CLAUDE_DESKTOP_SETUP.md  CLI_SUBPROCESS_COMPLETE.md  CLI_SUBPROCESS_README.md  DEPLOYMENT_STATUS.md  GEMINI.md  GENIUS_RESEARCH_GUIDE.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_PRD.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  INSTALLATION_STATUS.md  INTEGRATION.md  PHASE_COMPLETION_SUMMARY.md  QUICKSTART.md  README.md  README_INSTALLATION.md  REFACTORING_SUMMARY.md  RESTART_INSTRUCTIONS.md  SESSION_SUMMARY.md  TESTING.md  TEST_RESULTS.md  claude-mcp-manifest.json  docker-compose.yml  gemini-cli-config.toml  ingest_books.py  ingest_books_fast.py  pyproject.toml  restart_server.sh  run_tests.py  start-triz-services.sh  test_embeddings.py  test_single_book.py  test_triz.py  test_workflow_fix.py
.gemini/: settings.json
docs/: api_reference.md  claude-cli-guide.md  cli_usage.md  deployment-checklist.md
examples/: demo.py
scripts/: analyze_performance.py  ingest-books-intelligent.py  setup-claude.sh  setup-ollama.sh  test_cli_subprocess.py  validate_quickstart.py
specs/001-triz-engineering-co/: CLAUDE.md  data-model.md  plan.md  research.md  spec.md  tasks.md
specs/002-add-claude-cli/: CLAUDE.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: claude_mcp_server.py  cli.py  mcp_server.py
src/claude_tools/: __init__.py  async_utils.py  complete_handler.py  direct_handler.py  formatter.py  guided_handler.py  parser.py  solve_handler.py  workflow_handler.py
templates/: Claude.md
tests/: conftest.py  test_guided_triz_complete.py
(+102 files in other folders)
